@@ -142,7 +142,7 @@
 
 
 <!-- ###TEMPLATE_ERROR_VALIDATED_FORM### start-->
-	<p>###ERROR_VVALIDATED_FORM_TEXT###</p>
+	<p>###ERROR_VALIDATED_FORM_TEXT###</p>
 <!-- ###TEMPLATE_ERROR_VALIDATED_FORM### end-->
 
 
