@@ -1,3 +1,8 @@
+2012-08-09 Tsi YANG <tsi@in-cite.net>
+	* Fix: Error validated form marker.
+	* Feature: File list column file/url label.
+	* Fix: Filemount display.
+
 2012-08-07 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added filegroup's title label_userFunc.
 
